--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -208,17 +208,26 @@
    "id": "56cb0a36",
    "metadata": {},
    "source": [
-    "#### An impossible approach"
+    "#### a. An 'impossible' approach\n",
+    "\n",
+    "The first idea that comes into mind is to write a code to simulate die-rolling and repeat it as many times so as to obtain all possible ways to the target sum. This is a simple one to realise but performs horrible when you calculate more dice. In this case, 10-die-rolling is nearly impossible to solve, consuming huge amount of time.\n",
+    "\n",
+    "But the good point of this approach is, it gives detailed list of all possible ways(discarding repeated ones) and runs well when you have a relatively small number of dice(like 3,4 dice or so).\n",
+    "\n",
+    "Need to be mentioned, answer given by this approach can be either **'ordered'** or **'unordered'**. 'Ordered' means all the dice are thrown in a certain order, e.g. it can be count as two different way when you get a '1' with the 2nd die or a '1' with the 4th die, while other dice (and the sum itself) remain the same. 'Unordered' means you throw all the dice at once neglecting whether a number is given by a certain die. Since this approach stores all ways in a list, all difference between the two types is a `sort()` function(You'll see a comment about this in the code)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "id": "2e9cf547",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def roll_dice():\n",
+    "# We firstly define a function to simulate throwing one die, outputing an integer from 1 to 6(inclusive).\n",
+    "import random\n",
+    "\n",
+    "def roll_a_die():\n",
     "    import math\n",
     "    num = math.ceil(random.random()*6)\n",
     "    return num"
@@ -226,38 +235,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "id": "beb5c98b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_36952\\223862775.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mset_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m \u001b[1;31m#target sum x\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m#loop for as many times\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mdices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mroll_dice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mdice\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#1 die rolled\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0msum_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mdice\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdices\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_36952\\223862775.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mset_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m \u001b[1;31m#target sum x\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m#loop for as many times\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mdices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mroll_dice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mdice\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#1 die rolled\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0msum_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mdice\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdices\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All possible conbinations: \n",
+      " [[1, 2, 1, 2], [2, 1, 2, 1], [1, 1, 3, 1], [1, 2, 2, 1], [1, 1, 2, 2], [2, 2, 1, 1], [2, 1, 1, 2], [1, 1, 1, 3], [1, 3, 1, 1], [3, 1, 1, 1]]\n",
+      "\n",
+      "Numbers of possible ways:  10\n"
      ]
     }
    ],
    "source": [
-    "samples = []\n",
-    "set_x = 10 #target sum x\n",
-    "for i in range(pow(6,11)): #loop for as many times\n",
-    "    dices = [roll_dice() for dice in range(10)] #1 die rolled\n",
-    "    sum_x = 0\n",
-    "    for dice in dices:\n",
-    "        sum_x = sum_x + dice\n",
-    "    if sum_x == set_x:\n",
-    "        dices.sort()\n",
-    "        if dices not in samples:\n",
-    "            samples.append(dices)\n",
-    "    \n",
-    "print(samples)\n",
-    "print(len(samples))"
+    "def An_impossible_approach(set_x):\n",
+    "    samples = [] #Create a list to store all possible ways\n",
+    "    for i in range(100000): #loop for as many times\n",
+    "        dice = [roll_a_die() for dice in range(4)] #4 die rolled in this case\n",
+    "        sum_x = 0 #initialise the sum value\n",
+    "        for die in dice:\n",
+    "            sum_x += die\n",
+    "        if sum_x == set_x: \n",
+    "            #dice.sort()\n",
+    "            #the line above is optional,\n",
+    "            #without it, the solution will be 'ordered'\n",
+    "            if dice not in samples: #discard repeated ways\n",
+    "                samples.append(dice)\n",
+    "    return samples\n",
+    "\n",
+    "x = 6 #target sum x    \n",
+    "print('All possible conbinations: \\n',An_impossible_approach(x))\n",
+    "print('\\nNumbers of possible ways: ',len(An_impossible_approach(x)))"
    ]
   },
   {
@@ -265,16 +276,80 @@
    "id": "88b2bee7",
    "metadata": {},
    "source": [
-    "#### A feasible approach"
+    "#### b. A feasible approach\n",
+    "\n",
+    "The following approach uses an idea of dynamic programming. I was inspired by [some blogs](https://www.geeksforgeeks.org/dice-throw-dp-30/) introducing such a programming scheme. Also, I found there is a similar problem on Leetcode with more requriements, which takes more dice with more faces into account while limiting running time of the code.\n",
+    "\n",
+    "Inspired by those blogs, I figured on my own the basic equation between the final sum and former throws,\n",
+    "\n",
+    "$$dp[n][j]=\\sum^f_{k=1}{dp[n-1][j-k]}$$\n",
+    "\n",
+    "where $n$ is number of dice(die) thrown, $j$ is the target sum value, $f$ is the total faces on each die, and $k$ is a incrementing index that ends at f.\n",
+    "\n",
+    "For exmaple, to find the number of ways that gives the sum 6 of 4 dice, we can turn to ways that gives the sum 5 of 3 dice plus one more throw that gives a '1'. This contains the idea of recursion - you need to find your answer in previous try, that is to break down your final sum value into previous tries until you have only 1 die that can definitely gives you numbers from 1 to 6(which is a certain '1' try).\n",
+    "\n",
+    "Besides the basic equation, there must be some boundary conditions to limit the answer into reasonalbe number of ways, discarding those repeated solutions and those that surely will not happen. I tried several times and compared code of others to confirm that my code functions correctly when given any reasonalbe input values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5ee925d8",
+   "execution_count": 12,
+   "id": "fe150c16",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define a function with two arguements,\n",
+    "# n is number of dice thrown\n",
+    "# j is the target sum value\n",
+    "\n",
+    "def Find_number_of_ways(n,j):\n",
+    "    #the sum value should never exceed the total dots(n*6<j)\n",
+    "    #and the recursion should also end when the number of dice\n",
+    "    #is greater than the sum value(n>j) (cuz there's no 0 dot)\n",
+    "    if n*6 < j or n > j:\n",
+    "        return 0\n",
+    "    if n == 1: #with one die, there's only one way\n",
+    "        return 1\n",
+    "    memo = 0 #initialise our memory to store sum values\n",
+    "    for i in range(1,7):\n",
+    "        memo += dice_roll(n-1,j-i) #this part is the equation\n",
+    "    return memo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c64f7e35",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85228"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test the funciton with 10 dice rolling a sum of 20\n",
+    "Find_number_of_ways(10,20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b7b05a4",
+   "metadata": {},
+   "source": [
+    "This approach runs way more faster and is more acurate to realise the calculation. But problems still exist.\n",
+    "\n",
+    "- The code runs smoothly when there're only 10 dice which meets the assignment requirement. But the similar problem on Leetcode gives up to 30 dice with 30 faces. The run-time of this code exceeds the time limit unfortunately. Maybe it's because the `for` loop, but I'm not sure yet. I'll look into it afterwards.\n",
+    "- Due to the algorithm it uses, the approach can only gives 'ordered' solutions. It means all the dice must have an order. I still don't know how to generate 'unordered' solutions like you throw the 10 dice all at once. It might be impossible, if not turn to other algorithms."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -290,7 +365,11 @@
    "id": "05e8b837",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "list_of_x = np.array([])"
+   ]
   },
   {
    "cell_type": "markdown",
