--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fe150c16",
+   "id": "ee27dec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b7b05a4",
+   "id": "8119786f",
    "metadata": {},
    "source": [
     "This approach runs way more faster and is more acurate to realise the calculation. But problems still exist.\n",
@@ -361,14 +361,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "05e8b837",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
+       "       27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,\n",
+       "       44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "list_of_x = np.array([])"
+    "list_of_x = np.arange(10,61,1)\n",
+    "\n",
+    "list_of_x"
    ]
   },
   {
